--- a/HapExamParent/core/src/main/webapp/WEB-INF/view/sales/salse_order_gather.html
+++ b/HapExamParent/core/src/main/webapp/WEB-INF/view/sales/salse_order_gather.html
@@ -15,9 +15,9 @@
         function openJobDetailPage(orderId) {
             window.popWin = $.ligerDialog.open({
                 title : 'Order Details',
-                width : 760,
+                width : 960,
             	height: 550,
-            	url   : 'sales_order_details.html?orderId'+orderId
+            	url   : 'sales_order_details.html?orderId='+orderId
         	});
     	}
 	
